<resources>
    <string name="app_name">MyEC2</string>
    <string name="strTitleRegistration">Registration</string>
    <string name="strNameRegistration">Name</string>
    <string name="strLastNameRegistration">Last Name</string>
    <string name="strDniRegistration">DNI</string>
    <string name="strPhoneRegistration">Phone</string>
    <string name="strEmailRegistration">E-mail</string>
    <string name="strProgrammingLanguagesSelectionRegistration">Select the programs that you master:</string>
    <string name="strOtherRegistration">Other</string>
    <string name="strMssqlserverProgramRegistration">MS SQL Server</string>
    <string name="strVstudiocodeProgramRegistration">VStudio Code</string>
    <string name="strAndroidstudioRegistration">Android Studio</string>
    <string name="strFavoriteColorSelectionRegistration">Select your favorite color</string>
    <string name="strColorBlueRegistration">Blue</string>
    <string name="strColorRedRegistration">Red</string>
    <string name="strColorGreenRegistration">Green</string>
    <string name="strAccessRegistration">Access</string>
    <string name="strRegistryMain">Registry</string>
    <string name="strFormMain">Form</string>
    <string name="strListMain">List</string>
    <string name="strBackGlobal">Back</string>
    <string name="strTitleForm">Questionnaire Covid-19</string>
    <string name="strSymptomsForm">1. Check your symptoms.</string>
    <string name="strAppetiteAndSmellSymptomForm">Low of appetite or smelling</string>
    <string name="strCoughSymptomForm">Cough</string>
    <string name="strSoreThroatSymptomForm">Sore Throat</string>
    <string name="strNasalCongestionSymptomForm">Nasal Congestion</string>
    <string name="strFeverSymptomForm">Fever</string>
    <string name="strNoneGlobal">None</string>
    <string name="strFeverForm">2. Do you have a fever over 37 degrees?</string>
    <string name="strYesGlobal">Yes</string>
    <string name="strNoGlobal">No</string>
    <string name="strHouseForm">3. Do you live alone in your house?</string>
    <string name="strSeniorAdultForm">4. Do you live with a senior adult at home?</string>
    <string name="strServicesForm">5. Do you have the following services at home?</string>
    <string name="strElectricityServiceForm">Electricity</string>
    <string name="strWaterServiceForm">Water</string>
    <string name="strInternetServiceForm">Internet</string>
    <string name="strTvServiceForm">TV</string>
    <string name="strResolveForm">Resolve</string>
</resources>