<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#272424"
    tools:context=".RegistrationActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdlLeftRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="40dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdlRightRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="40dp" />

    <ImageView
        android:id="@+id/imvRegisterRegistration"
        android:layout_width="101dp"
        android:layout_height="96dp"
        android:layout_marginTop="56dp"
        app:tint="#E3D9D9"
        app:layout_constraintEnd_toStartOf="@+id/gdlRightRegistration"
        app:layout_constraintHorizontal_bias="0.445"
        app:layout_constraintStart_toStartOf="@+id/gdlLeftRegistration"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_person_add_24" />

    <TextView
        android:id="@+id/txvTitleRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/strTitleRegistration"
        android:textColor="#DDD0D0"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/gdlRightRegistration"
        app:layout_constraintStart_toStartOf="@+id/gdlLeftRegistration"
        app:layout_constraintTop_toBottomOf="@+id/imvRegisterRegistration" />

    <EditText
        android:id="@+id/ettNameRegistration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:fontFamily="@font/comfortaa"
        android:hint="@string/strNameRegistration"
        android:inputType="text"
        android:textColor="#D6C6C6"
        android:textColorHint="#B5AFAF"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/gdlRightRegistration"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/gdlLeftRegistration"
        app:layout_constraintTop_toBottomOf="@+id/txvTitleRegistration" />

    <EditText
        android:id="@+id/ettLastNameRegistration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:fontFamily="@font/comfortaa"
        android:hint="@string/strLastNameRegistration"
        android:inputType="text"
        android:textColor="#E3D9D9"
        android:textColorHint="#B5AFAF"
        app:layout_constraintEnd_toStartOf="@+id/gdlRightRegistration"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/gdlLeftRegistration"
        app:layout_constraintTop_toBottomOf="@+id/ettNameRegistration" />

    <EditText
        android:id="@+id/ettDniRegistration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:fontFamily="@font/comfortaa"
        android:hint="@string/strDniRegistration"
        android:inputType="text"
        android:textColor="#E3D9D9"
        android:textColorHint="#B5AFAF"
        app:layout_constraintEnd_toStartOf="@+id/gdlRightRegistration"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/gdlLeftRegistration"
        app:layout_constraintTop_toBottomOf="@+id/ettLastNameRegistration" />

    <EditText
        android:id="@+id/ettPhoneRegistration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:fontFamily="@font/comfortaa"
        android:hint="@string/strPhoneRegistration"
        android:inputType="text"
        android:textColor="#E3D9D9"
        android:textColorHint="#B5AFAF"
        app:layout_constraintEnd_toStartOf="@+id/gdlRightRegistration"
        app:layout_constraintStart_toStartOf="@+id/gdlLeftRegistration"
        app:layout_constraintTop_toBottomOf="@+id/ettDniRegistration" />

    <EditText
        android:id="@+id/ettEmailRegistration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:fontFamily="@font/comfortaa"
        android:hint="@string/strEmailRegistration"
        android:inputType="text"
        android:textColor="#E3D9D9"
        android:textColorHint="#B5AFAF"
        app:layout_constraintEnd_toStartOf="@+id/gdlRightRegistration"
        app:layout_constraintStart_toStartOf="@+id/gdlLeftRegistration"
        app:layout_constraintTop_toBottomOf="@+id/ettPhoneRegistration" />

    <TextView
        android:id="@+id/txvProgramsRegistration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/strProgrammingLanguagesSelectionRegistration"
        android:textColor="#E3D9D9"
        android:textColorHint="#E3D9D9"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/gdlRightRegistration"
        app:layout_constraintStart_toStartOf="@+id/gdlLeftRegistration"
        app:layout_constraintTop_toBottomOf="@+id/ettEmailRegistration" />

    <LinearLayout
        android:id="@+id/llyProgramsContainerRegistration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/gdlRightRegistration"
        app:layout_constraintStart_toStartOf="@+id/gdlLeftRegistration"
        app:layout_constraintTop_toBottomOf="@+id/txvProgramsRegistration">

        <CheckBox
            android:id="@+id/cbxMssqlserverRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa"
            android:text="@string/strMssqlserverProgramRegistration"
            android:textColor="#E3D9D9" />

        <CheckBox
            android:id="@+id/cbxVstudiocodeRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa"
            android:text="@string/strVstudiocodeProgramRegistration"
            android:textColor="#E3D9D9" />

        <CheckBox
            android:id="@+id/cbxAndroidstudioRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa"
            android:text="@string/strAndroidstudioRegistration"
            android:textColor="#E3D9D9" />

        <CheckBox
            android:id="@+id/cbxOtherRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa"
            android:text="@string/strOtherRegistration"
            android:textColor="#E3D9D9" />

        <EditText
            android:id="@+id/ettOtherProgramRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/comfortaa"
            android:hint="@string/strOtherRegistration"
            android:inputType="text"
            android:textColor="#E3D9D9"
            android:textColorHint="#B5AFAF" />
    </LinearLayout>

    <TextView
        android:id="@+id/txvFavoriteColorRegistration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/strFavoriteColorSelectionRegistration"
        android:textColor="#E3D9D9"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/gdlRightRegistration"
        app:layout_constraintStart_toStartOf="@+id/gdlLeftRegistration"
        app:layout_constraintTop_toBottomOf="@+id/llyProgramsContainerRegistration" />

    <RadioGroup
        android:id="@+id/rgpFavoriteColorRegistration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/gdlRightRegistration"
        app:layout_constraintStart_toStartOf="@+id/gdlLeftRegistration"
        app:layout_constraintTop_toBottomOf="@+id/txvFavoriteColorRegistration">

        <RadioButton
            android:id="@+id/rbnColorBlueRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa"
            android:text="@string/strColorBlueRegistration"
            android:textColor="#E3D9D9" />

        <RadioButton
            android:id="@+id/rbnColorRedRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa"
            android:text="@string/strColorRedRegistration"
            android:textColor="#E3D9D9" />

        <RadioButton
            android:id="@+id/rbnColorGreenRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa"
            android:text="@string/strColorGreenRegistration"
            android:textColor="#E3D9D9" />

        <RadioButton
            android:id="@+id/rbnColorOtherRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa"
            android:text="@string/strOtherRegistration"
            android:textColor="#E3D9D9" />
    </RadioGroup>

    <Button
        android:id="@+id/btnAccessRegistration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#2C2F30"
        android:fontFamily="@font/comfortaa"
        android:text="@string/strAccessRegistration"
        app:layout_constraintEnd_toStartOf="@+id/gdlRightRegistration"
        app:layout_constraintStart_toStartOf="@+id/gdlLeftRegistration"
        app:layout_constraintTop_toBottomOf="@+id/rgpFavoriteColorRegistration"
        app:strokeColor="#E3D9D9"
        app:strokeWidth="2px" />

    <Button
        android:id="@+id/btnBackRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#2C2F30"
        android:fontFamily="@font/comfortaa"
        android:text="@string/strBackGlobal"
        app:layout_constraintEnd_toStartOf="@+id/gdlRightRegistration"
        app:layout_constraintTop_toBottomOf="@+id/btnAccessRegistration"
        app:strokeColor="#E3D9D9"
        app:strokeWidth="2px" />
</androidx.constraintlayout.widget.ConstraintLayout>